--- a/.devcontainer/codespaces.yml
+++ b/.devcontainer/codespaces.yml
@@ -16,6 +16,6 @@ services:
       - 3389:3389/tcp
       - 3389:3389/udp
     volumes:
-      - ./windows:/storage
+      - .data/windows:/storage
     restart: on-failure
     stop_grace_period: 2m
