--- a/compose.yml
+++ b/compose.yml
@@ -4,10 +4,11 @@ services:
     container_name: windows
     environment:
     VERSION: "10"
-    RAM_SIZE: "7G"
+    RAM_SIZE: "5G"
   CPU_CORES: "10"
    USERNAME: "Renato"
    PASSWORD: "123"
+   DISK_SIZE: "100G" 
     devices:
       - /dev/kvm
       - /dev/net/tun
